--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d6b5aef",
    "metadata": {},
    "source": [
     "### Objectives\n",
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1841ccbb",
    "metadata": {},
    "source": [
     "### Problem Statement\n",
@@ -30,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64bd88d1",
    "metadata": {},
    "source": [
     "#### Assumptions when solving this problem\n",
@@ -42,7 +39,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeff2ec1",
    "metadata": {},
    "source": [
     "1. What is the current cost of maintaining the remote data center location?"
@@ -51,16 +47,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d9f0006",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nThe current cost is $100,000.\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution"
+    "# your solution\n",
+    "\"\"\"\n",
+    "The current cost is $100,000.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1803e76a",
    "metadata": {},
    "source": [
     "2. What are the new business requirements from your engineering team? "
@@ -68,17 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cd885a75",
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nExpanding hardware capabilities vertically for certain data center computers.\\nExpanding hardware capabilities horizontally.\\nReal estate depending on locale & be able to return value on propterty.\\nExpand into other offices.\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution, but be creative! It doesn't have to limit to the requirement from the problem statement"
+    "\"\"\"\n",
+    "Expanding hardware capabilities vertically for certain data center computers.\n",
+    "Expanding hardware capabilities horizontally.\n",
+    "Real estate depending on locale & be able to return value on propterty.\n",
+    "Expand into other offices.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4c9b740b",
    "metadata": {},
    "source": [
     "3. Based on the new business requirements, you decide that you need to start migrating (at least) your resources to the cloud system. What are some things that you may need to look into when considering migrating your legacy system to cloud?"
@@ -86,17 +108,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c0e1eb0d",
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n- do we want to do a shallow or deep conversion?\\n- what precautions are we taking with cybersecurity?\\n- do we want to develop the expanded data centers for use by the public?\\n- how available is the data going to be after it has been migrated to the cloud?\\n- how do we want to grow our talent's capabilities in our selected cloud partner's environment?\\n- what data are we prioritizing to migrate first?\\n- what is the timeline of transferring all of this information?\\n\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution"
+    "\"\"\"\n",
+    "- do we want to do a shallow or deep conversion?\n",
+    "- what precautions are we taking with cybersecurity?\n",
+    "- do we want to develop the expanded data centers for use by the public?\n",
+    "- how available is the data going to be after it has been migrated to the cloud?\n",
+    "- how do we want to grow our talent's capabilities in our selected cloud partner's environment?\n",
+    "- what data are we prioritizing to migrate first?\n",
+    "- what is the timeline of transferring all of this information?\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "59bec5af",
    "metadata": {},
    "source": [
     "4. In the end, you'll need to pursuade leadership why you need to migrate a system to another place, i.e. cloud, when in the eyes of leadership, everything is working fine. Write out cons/pros based on the shared categories, like cost, human resources, etc."
@@ -104,17 +143,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f99e810d",
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nPros:\\n- system will run more efficiently and reduce variable cost; all services are housed in evnironment\\n- people will manage certain processes which will drive a lowered cost in labor\\n- competitive advantage to similarly positioned eCommerce companies who have not made the transition\\n- will allow us to build a search engine, recommendation engine, and few other engines that will delight customers\\n- speed of processing transactions will be more efficient and quick\\n- drive business to more sales as result of new features of eCommerce website\\nCons:\\n- data may not be as quick to be retrieved\\n- will need to be more diligent and possibly spend more on cybersecurity\\n- will likely need to lean on consultants to assist in the data conversion and partner selection\\n- risk to data integrity by potentially losing data in conversion process; important to manage process of conversion well\\n- transformation will take a long time and may involve outage periods where we are unable to leverage our data for periods\\n- risk that migration could potentially affect current processes and disrupt currently efficient operations\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your solution"
+    "\"\"\"\n",
+    "Pros:\n",
+    "- system will run more efficiently and reduce variable cost; all services are housed in evnironment\n",
+    "- people will manage certain processes which will drive a lowered cost in labor\n",
+    "- competitive advantage to similarly positioned eCommerce companies who have not made the transition\n",
+    "- will allow us to build a search engine, recommendation engine, and few other engines that will delight customers\n",
+    "- speed of processing transactions will be more efficient and quick\n",
+    "- drive business to more sales as result of new features of eCommerce website\n",
+    "Cons:\n",
+    "- data may not be as quick to be retrieved\n",
+    "- will need to be more diligent and possibly spend more on cybersecurity\n",
+    "- will likely need to lean on consultants to assist in the data conversion and partner selection\n",
+    "- risk to data integrity by potentially losing data in conversion process; important to manage process of conversion well\n",
+    "- transformation will take a long time and may involve outage periods where we are unable to leverage our data for periods\n",
+    "- risk that migration could potentially affect current processes and disrupt currently efficient operations\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6e33f2e8",
    "metadata": {},
    "source": [
     "(OPTIONAL) This may require an engineering/software background. You have the same hypothetical machine learning architecture, but one on the legacy system and one on the cloud. Moving away from the business logic, what is the benefit on the engineering stack if we use the cloud? What can be problematic if we use the cloud?"
@@ -123,7 +186,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edbbc3aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,8 +194,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nThe engineering stack will be disrupted by the change to using cloud instead of operating locally, and the team will need\\nto learn the new partner's cloud platform to handle their job effectively. However, the benefit is that this frees up the\\nteams resources, time, and effort to focus on data engineering instead of troubleshooting problems with an internally\\nimplemented data repository.\\n\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "The engineering stack will be disrupted by the change to using cloud instead of operating locally, and the team will need\n",
+    "to learn the new partner's cloud platform to handle their job effectively. However, the benefit is that this frees up the\n",
+    "teams resources, time, and effort to focus on data engineering instead of troubleshooting problems with an internally\n",
+    "implemented data repository.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "60f1049e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -141,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
